@@ -2,6 +2,8 @@ package org.autotest.operators.constants;
 
 import org.autotest.operators.MutationOperator;
 import spoon.reflect.code.CtLiteral;
+import spoon.reflect.code.CtUnaryOperator;
+import spoon.reflect.code.UnaryOperatorKind;
 import spoon.reflect.declaration.CtElement;
 
 import java.util.Arrays;
@@ -15,29 +17,52 @@ import java.util.List;
 public class ZeroConstantMutator extends MutationOperator {
     @Override
     public boolean isToBeProcessed(CtElement candidate) {
-        if (!(candidate instanceof CtLiteral)) {
-            return false;
-        }
-
-        CtLiteral op = (CtLiteral)candidate;
-        String type = getLiteralType(op);
-        List<String> targetTypes = Arrays.asList(
+        List<String> targetTypes = List.of(
                 "int"
         );
+        boolean isLiteral = candidate instanceof CtLiteral;
+        boolean isUnaryOperator = candidate instanceof CtUnaryOperator;
+        if (isLiteral) {
+            CtLiteral<?> candidate_lit = (CtLiteral<?>)candidate;
+            String type = getLiteralType(candidate_lit);
 
-        if (!targetTypes.contains(type))
-            return false;
 
-        if (op.toString().equals("0"))
-            return false;
+            boolean isNumber = targetTypes.contains(type);
+            boolean isZero = candidate_lit.toString().equals("0");
 
-        return true;
+            CtElement parent = candidate.getParent();
+            boolean parentIsUnary = parent instanceof CtUnaryOperator;
+            boolean parentIsNEG = parentIsUnary && (((CtUnaryOperator<?>)parent).getKind() == UnaryOperatorKind.NEG);
+
+            return !parentIsNEG && isNumber && !isZero;
+        }
+        else if (isUnaryOperator) {
+            CtUnaryOperator<?> candidate_unary = (CtUnaryOperator<?>)candidate;
+            boolean isNEG = candidate_unary.getKind() == UnaryOperatorKind.NEG;
+            CtElement operand = candidate_unary.getOperand();
+
+            boolean operandIsInt = false;
+            if (operand instanceof CtLiteral)
+                operandIsInt = targetTypes.contains(getLiteralType((CtLiteral<?>) operand));
+
+            return isNEG && operandIsInt;
+        }
+        return false;
     }
 
     @Override
     public void process(CtElement candidate) {
-        CtLiteral op = (CtLiteral)candidate;
-        op.setValue(op.getFactory().Code().createLiteral(0));
+        boolean isLiteral = candidate instanceof CtLiteral;
+        if (isLiteral) {
+            CtLiteral candidate_lit = (CtLiteral) candidate;
+            candidate_lit.setValue(candidate_lit.getFactory().Code().createLiteral(0));
+        }
+        else { // Es un CtUnaryOperator de tipo NEG, ya filtrado en isToBe
+            CtUnaryOperator unaryOp = (CtUnaryOperator<?>) candidate;
+            unaryOp.setOperand(unaryOp.getFactory().Code().createLiteral(0));
+            unaryOp.setKind(UnaryOperatorKind.POS); // Cambia NEG (-) por POS (+)
+            //System.out.print(unaryOp.toString() + '\n');
+        }
     }
 
     private static String getLiteralType(CtLiteral op) {
@@ -46,9 +71,8 @@ public class ZeroConstantMutator extends MutationOperator {
 
     @Override
     public String describeMutation(CtElement candidate) {
-        CtLiteral op = (CtLiteral)candidate;
         return this.getClass().getSimpleName() + ": Se reemplazó " +
-                op.getValue().toString() + " por 0" +
-                " en la línea " + op.getPosition().getLine() + ".";
+                candidate.toString() + " por 0" +
+                " en la línea " + candidate.getPosition().getLine() + ".";
     }
 }
